deploy/kubernetes/xuanwu-codegen/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xuanwu-codegen
  name: xuanwu-codegen
  namespace: xuanwu-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xuanwu-codegen
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xuanwu-codegen
        app.kubernetes.io/instance: xuanwu
    spec:
      imagePullSecrets:
        - name: "coding-registry"
      serviceAccountName: xuanwu-codegen
      containers:
        - image: "image"
          imagePullPolicy: Always
          name: codegen
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
          - mountPath: "/xuanwu/config.yaml"
            name: "xuanwu-codegen"
            readOnly: false
            subPath: "config.yaml"
      volumes:
        - configMap:
            defaultMode: 0777
            items:
              - key: "config.yaml"
                path: "config.yaml"
            name: "xuanwu-codegen-configmap"
          name: "xuanwu-codegen"
