deploy/kubernetes/xuanwu-codegen/service.yml
apiVersion: v1
kind: Service
metadata:
  name: xuanwu-codegen-service
  namespace: xuanwu-system
spec:
  ports:
    - port: 9030
      targetPort: 9030
      protocol: TCP
  type: NodePort
  selector:
    app: xuanwu-codegen
