deploy/kubernetes/xuanwu-codegen/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: xuanwu-codegen
  namespace: xuanwu-system
spec:
  ingressClassName: nginx
  rules:
    - host: codegen.wecoding.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xuanwu-codegen-service
                port:
                  number: 9030
